04/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: netology
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
