04/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-nodeport
  namespace: netology
spec:
  type: NodePort
  selector:
    app: multi-container
  ports:
    - name: nginx-port
      port: 80
      targetPort: 80
      nodePort: 30080
