04/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-container-service
  namespace: netology
spec:
  type: ClusterIP
  selector:
    app: multi-container
  ports:
    - name: nginx-port
      port: 9001
      targetPort: 80
    - name: multitool-port
      port: 9002
      targetPort: 8080
